<resources>
    <string name="app_name">Frum Jerusalem</string>
    <string name="category_restaurants">Dining</string>
    <string name="category_parks">Parks</string>
    <string name="category_indoors">Indoors</string>
    <string name="category_outdoors">Outdoors</string>
    <string name="location_placeHolder">The Kotel</string>
    <string name="opening_hours_placeHolder">Open 24 hours</string>
    <string name="description_placeHolder">This is a short description</string>
    <string name="directions">Directions</string>
    <string name="call">Call</string>
    <string name="website">Website</string>
    <string name="about">About</string>
    <string name="noPhoneNumber">No phone Number</string>
    <string name="kotel_name">The Kotel</string>
    <string name="kotel_summary">Last remaining wall of Second Temple. Holy Jewish site</string>
    <string name="kotel_times">Open 24 Hours</string>
    <string name="kotel_description">The Western Wall or Kotel, is an ancient limestone wall in the Old City of Jerusalem.\n
        It is a relatively small segment of a far longer ancient retaining wall.
        The wall was originally erected as part of the expansion of the Second Jewish Temple begun by Herod the Great.
        The Western Wall is considered holy due to its connection to the Temple Mount</string>
    <string name="kotel_address">The Old City</string>
    <string name="kotel_url">https://english.thekotel.org/</string>
    <string name="kotel_phone_number">+972&#8211;26271333</string>
    <string name="machane_yehudah_name">Machane Yehudah</string>
    <string name="machane_yehudah_summary">Vibrant Market In Central Jerusalem</string>
    <string name="machane_yehudah_times">8am until 7pm</string>
    <string name="machane_yehudah_description">World-famous icons of Jerusalem include the Western Wall, the Tower of David and the Machane Yehuda market.
        The Western Wall and the Tower of David represent the religious, historical nature of Jerusalem, the place from which the Jewish people developed.
        Machane Yehuda market, however, represents the contemporary—and the future heart of Jerusalem.
        Machane Yehuda integrates, in a unique way, the old and the new. Both a bustling marketplace and a neighborhood, it incorporates food, drink, shopping, bars, restaurants.
        The shuk still retains its most important characteristics, it remains authentic, with all the flavors and aromas, the colors and the traders interaction with the crowds.
        The Machane Yehuda market is widely recognized as a symbol of the Jerusalem, and for a very good reason: Jerusalemites see it as a place that represents them, symbolizes them,
        and gives them a unique identity in a larger Israeli social context. But this name has something inexpressible to language.Even though Jerusalem today has many shopping and entertainment centers,
        some are even at several hotels in Jerusalem, there is something about the Machane Yehuda market that attracts people, even without a shopping list. Perhaps it is the ability to simply be who we are people who love life and who love Jerusalem.</string>
    <string name="machane_yehudah_address">Rehov Mahane Yehuda, Jerusalem</string>
    <string name="machane_yehuah_url">http://en.machne.co.il/</string>
    <string name="zoo_name">The Biblical Zoo</string>
    <string name="zoo_summary">The Biggest Zoo In Israel</string>
    <string name="zoo_times">9am until 6pm</string>
    <string name="zoo_description">The Tisch Family Zoological Gardens, also known as the Biblical Zoo, opened in Jerusalem’s Malha neighborhood in 1993.
        The Zoo Stretches across almost 100 acres, and is ranked year after year as one of the top tourist sites in Israel, attracting over 750,000 visitors annually.
        The Zoo’s scenic location in the Judean hills with its varied animal exhibits, draws people from all threads of Jerusalem’s vibrant social fabric Jewish,
        Christian and Muslim; secular and religious: young and old; and tourists and locals. Thus the Zoo has become a bridge between communities.
        It is one of the few sites in Israel where everyone comes together and feels welcome.</string>
    <string name="zoo_address">1 Derech Aharon Shulov, Jerusalem</string>
    <string name="zoo_url">http://www.jerusalemzoo.org/</string>
    <string name="zoo_phone_number">+972&#8211;26750111</string>
    <string name="yemin_name">Yemin Moshe</string>
    <string name="yemin_summary">First neighborhood outside old city walls</string>
    <string name="yemin_times">Open 24 hours</string>
    <string name="yemin_description">Yemin Moshe was established in 1892–1894 by the Montefiore Welfare Fund.
        Located outside Jerusalem\'s Old City, it was conceived as a solution to the overcrowding and unsanitary
        conditions inside the walls. The Fund was continuing the work done by British Jewish banker Moses Montefiore
        and the new project was meant to mark the seventh year after the philanthropist's death.
        The name commemorates Montefiore's first name and a verse from the Book of Isaiah.</string>
    <string name="yemin_address">Yemin Moshe, Jerusalem</string>
    <string name="yemin_url">https://www.touristisrael.com/yemin-moshe-jerusalem/6111/</string>
    <string name="jaffa_name">Jaffa Gate</string>
    <string name="jaffa_times">Open 24 Hours</string>
    <string name="jaffa_summary">Main entrance into the Ol City</string>
    <string name="jaffa_description">One of the seven open gates of the Old City, Jaffa Gate serves as the main tourist
        entry point to the city. Just inside the gate, you’ll find the Old City bazaar and the Tower of David Museum.
        Jaffa Gate is one of the most beautiful and important gates among the gates of the Ottoman city wall from the 16th century.
        The gate is named after Jaffa- the city to which this path lead. The Arab name for this gate is “Bab El Khalil”,
        named after the city of Hebron (El Khalil in Arabic) to which the southern path starting from Jaffa Gate leads.</string>
    <string name="jaffa_address">Jaffa Gate, Jerusalem</string>
    <string name="jaffa_url">https://www.itraveljerusalem.com/ent/jaffa-gate/</string>
    <string name="israel_museum_name">The Israel Museum</string>
    <string name="israel_museum_summary">Amazing historical artifacts of The People of Israel</string>
    <string name="israel_museum_times">10am until 5pm</string>
    <string name="israel_museum_description">The Israel Museum  was established in 1965 as Israel\'s national museum.
        Among the unique objects on display are the Venus of Berekhat Ram, the interior of a 1736 Zedek ve Shalom synagogue from Suriname,
        necklaces worn by Jewish brides in Yemen and a mosaic Islamic prayer niche from 17th-century Persia.
        An urn-shaped building on the grounds of the museum, the Shrine of the Book,
        houses the Dead Sea Scrolls and artifacts discovered at Masada. It is one of the largest museums in the region.</string>
    <string name="israel_museum_address">Derech Ruppin 11</string>
    <string name="israel_museum_url">http://www.imj.org.il/en/</string>
    <string name="israel_museum_phone_number">+9722&#8211;6708811</string>
    <string name="yad_vashem_name">Yad Vashem</string>
    <string name="yad_vashem_summary">Holocaust Memorial Center</string>
    <string name="yad_vashem_times">8:30am until 5pm</string>
    <string name="yad_vashem_decription">Yad Vashem is Israel\'s official memorial to the victims of the Holocaust.
        It is dedicated to preserving the memory of the dead; honoring Jews who fought against their Nazi oppressors and Gentiles
        who selflessly aided Jews in need, and researching the phenomenon of the Holocaust in particular and genocide in general,
        with the aim of avoiding such events in the future.</string>
    <string name="yad_vashem_address">Har Hazikaron, Jerusalem</string>
    <string name="yad_vashem_url">https://www.yadvashem.org/</string>
    <string name="yad_vashem_phone_number">+9722&#8211;6443400</string>
    <string name="aquarium_name">The Israel Aquarium</string>
    <string name="aquarium_summary">Israel\'s first and only Aquarium!</string>
    <string name="aquarium_times">Advance Bookings Only</string>
    <string name="aquarium_description">The Gottesman Family Israel Aquarium, Jerusalem is a public aquarium in Israel inaugurated
        on 19.6.2017. The aquarium focuses on Israel\'s marine environment - the Red Sea and the Mediterranean Sea as well
        as on the Sea of Galilee and the Dead Sea. The aquarium was built by the Tish Family Zoological Gardens
        (the Biblical Zoo in Jerusalem) and is located next to it, but stands on its own as a separate tourist attraction.
        The aquarium will open to the general public for a running in period during the summer of 2017. </string>
    <string name="aquarium_address">1 Aharon Shulov, Jerusalem</string>
    <string name="aquarium_url">https://www.israel-aquarium.org.il/english</string>
    <string name="aquarium_phone_number">+97273&#8211;3399000</string>
    <string name="science_museum_name">Bloomfield Science Museum</string>
    <string name="science_museum_summary">A fun packed educational day out</string>
    <string name="science_museum_times">10am until 6pm</string>
    <string name="science_museum_description">The Bloomfield Science Museum in Jerusalem is an informal cultural and educational institution
        that presents exhibitions consisting of interactive exhibits on subjects of science and technology,
        and integrates these exhibits into a context through a wide range of educational activities.
        The goals of the museum are to increase interest among the general public in science and technology
        in the world around us, to promote excellency in sciences among youth, and to present science and technology
        as an integral part of human culture.</string>
    <string name="science_museum_address">Museum Boulevard, Jerusalem</string>
    <string name="science_museum_url">http://www.mada.org.il/en/</string>
    <string name="science_museum_phone_number">+9722&#8211;6544888</string>
    <string name="tunnel_tours_name">Kotel Tunnel Tours</string>
    <string name="tunnel_tours_summary">A journey through time to the history of Jerusalem</string>
    <string name="tunnel_tours_times">7am until late at night</string>
    <string name="tunnel_tours_description">The Western Wall of the Temple Mount is one of the most magnificent
        and significant remnants in Jerusalem from the days of the Second Temple, destroyed approximately 2,000 years ago.
        The Western Wall stretches along almost half a kilometer, but today, the part visible to all at the Western Wall Plaza
        is a mere 70 meters of it. The tour of the Western Wall Tunnels allows visitors to reach the segments of the Wall hidden
        from view, and to touch the original and special stones that tell the story of the Jewish nation. Visitors to the Western
        Wall Tunnels walk through ancient and fascinating subterranean spaces with exquisite archeological findings, such as large
        stone arches, water pits, an ancient water aqueduct that ends at the Strouthion Pool, and more.</string>
    <string name="tunnel_tours_address">Entrance from the Kotel</string>
    <string name="tunnel_tours_url">https://english.thekotel.org/western_wall_sites/western_wall_tunnels/</string>
    <string name="tunnel_tours_phone_number">+9722&#8211;6271333</string>
    <string name="teddy_park_name">Teddy Park</string>
    <string name="teddy_park_summary">Have fun in the fountains</string>
    <string name="teddy_park_times">7am until 10pp</string>
</resources>