<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/detail_image_height"
        android:fitsSystemWindows="true"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleMarginEnd="48dp"
            app:expandedTitleMarginStart="16dp"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <ImageView
                android:id="@+id/detail_image_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fitsSystemWindows="true"
                android:scaleType="centerCrop"
                app:layout_collapseMode="parallax"
                tools:src="@drawable/kotel" />

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

        </android.support.design.widget.CollapsingToolbarLayout>

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/attractiomName_opening_times"
                style="@style/BasicTextView"
                android:layout_marginLeft="@dimen/text_margin_left"
                android:layout_marginTop="8dp"
                android:textColor="@color/iconColor"
                android:textSize="@dimen/description_textSize"
                tools:text="@string/opening_hours_placeHolder" />

            <RatingBar
                android:id="@+id/rating_bar"
                style="?android:attr/ratingBarStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/attractiomName_opening_times"
                android:layout_marginLeft="@dimen/text_margin_left"
                android:layout_marginTop="8dp"
                android:numStars="5"
                android:stepSize="0.5"
                tools:rating="4.5" />


            <LinearLayout
                android:id="@+id/action_icon_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/rating_bar"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:layout_marginTop="16dp"
                android:orientation="horizontal">

                <TextView
                    style="@style/ActionIconViewTheme"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:drawableTop="@drawable/ic_directions"
                    android:text="@string/directions"/>

                <TextView
                    android:id="@+id/phone_action_icon"
                    style="@style/ActionIconViewTheme"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:drawableTop="@drawable/ic_local_phone"
                    android:fontFamily="@font/roboto"
                    android:text="@string/call" />

                <TextView
                    android:id="@+id/web_icon_view"
                    style="@style/ActionIconViewTheme"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:drawableTop="@drawable/ic_language"
                    android:text="@string/website" />
            </LinearLayout>

            <android.support.v7.widget.CardView xmlns:cardView="http://schemas.android.com/apk/res-auto"
                android:id="@+id/card_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/action_icon_layout"
                android:layout_marginLeft="32dp"
                android:layout_marginRight="32dp"
                android:layout_marginTop="16dp"
                android:backgroundTint="@android:color/white"
                android:clickable="true"
                android:elevation="2dp"
                android:focusable="true"
                android:foreground="?android:attr/selectableItemBackground"
                cardView:cardCornerRadius="@dimen/corner_radius">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/aboutView"
                        style="@style/BasicTextView"
                        android:layout_marginBottom="@dimen/dp_8"
                        android:layout_marginLeft="@dimen/dp_12"
                        android:layout_marginTop="@dimen/dp_8"
                        android:text="@string/about"
                        android:textSize="22sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/description"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical|right"
                        android:layout_marginBottom="@dimen/dp_12"
                        android:layout_marginLeft="@dimen/dp_12"
                        android:layout_marginRight="@dimen/dp_12"
                        android:fontFamily="@font/roboto"
                        android:textColor="@color/iconColor"
                        android:textSize="@dimen/description_textSize"
                        tools:text="@string/kotel_description" />

                </LinearLayout>


            </android.support.v7.widget.CardView>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/card_view"
                android:layout_marginLeft="@dimen/text_margin_left"
                android:layout_marginTop="@dimen/text_margin_left"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/location_address_view"
                    style="@style/DetailActivityTextViewTheme"
                    android:layout_marginTop="@dimen/dp_16"
                    android:drawableLeft="@drawable/ic_location_on"
                    tools:text="@string/kotel_address" />

                <TextView
                    android:id="@+id/location_phone_number"
                    style="@style/DetailActivityTextViewTheme"
                    android:layout_marginTop="@dimen/dp_16"
                    android:drawableLeft="@drawable/ic_local_phone"
                    android:layout_marginBottom="@dimen/dp_16"
                    tools:text="@string/kotel_phone_number" />

            </LinearLayout>

        </RelativeLayout>


    </android.support.v4.widget.NestedScrollView>

</android.support.design.widget.CoordinatorLayout>
